# manipulator_minor_research

./: LICENSE  README.md  init_iiwa.py
API/catkin/src/coppelia_sim/: CMakeLists.txt  package.xml
API/catkin/src/coppelia_sim/scenes/: CenaCalibracao.ttt
API/catkin/src/coppelia_sim/scripts/: ScriptComandoComCaptura.py
API/catkin/src/kuka_controller/: CMakeLists.txt  ScriptComandoComCaptura.py  camera_v2.py  integrate_sim_demo.py  integrate_sim_demonstracao.py  integrate_sim_interactive.py  interaction.py  kuka_gui.py  kuka_ros_node.py  movimentacao.py  package.xml  server_V30032017.py  settings.py
overhead_bin/: overh_bin.xml
