<package format="2">
  <name>kuka_controller</name>
  <version>0.0.1</version>
  <description>The kuka_controller package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
